--- a/style.css
+++ b/style.css
@@ -5,9 +5,7 @@
     display: flex;
     flex-wrap: wrap;
     position: relative;
-    
-    
-   
+    box-sizing: border-box;
 }
 .days{
     width:100px;
@@ -15,6 +13,7 @@
     /* justify-content: center; */
     align-content: space-between;
     padding:10px;
+    box-sizing: border-box;
 }
 .modal-class{
     visibility: hidden;
@@ -28,7 +27,7 @@
     position: absolute;
     box-sizing: border-box;
     padding: 10px;
-    /* height: 400px; */
+    height: 400px;
     overflow-y: scroll
 
 }
@@ -59,4 +58,11 @@
 }
 #mnth{
     text-align: center;
+}
+
+@media(min-width:400px){
+    .modal-class{
+        left:100px;
+        top:100px;
+    }
 }
